# PTPNperfbound

./: README.md  README.txt  Solver_modules.md  pyproject.toml  requirements.txt  setup.py
VPProjects/: PTPNBoundTool.vpp  PTPNBoundTool.vpp.vbak  fromArpe.vpp
doc/: Solver_modules.md
examples/: HCU_database_LCA_closed.pnml  HCU_database_LCA_closed_lp_CT.lp  HCU_database_LCA_closed_lp_max_X.lp  HCU_database_LCA_closed_netresults.dot  HCU_database_LCA_closed_netresults.pnml  HCUdatabaseLCA_closed.pnml  HCUdatabaseLCA_results.pnml  assessmentdata.lp  assessmentdata.lpX_sol  assessmentdata.lp_sol  assessmentdata.pnml  assessmentdata.pnml.pnml  assessmentdata_lp_max_X.lp  assessmentdata_results.pnml  example1.dot  example1.lp_sol  example1.pnml  example1.pnml.pnml  example1_distrib.pnml  example1_distrib.pnml.pnml  example1_distrib_lp_CT.lp  example1_distrib_lp_CT_sol.xml  example1_distrib_lp_max_X.lp  example1_distrib_lp_max_X_sol.xml  example1_distrib_results.dot  example1_distrib_results.pnml  example1_lp_CT.lp  example1_lp_CT_sol.xml  example1_lp_max_X.lp  example1_lp_max_X_sol.xml  example1_results.pnml
fromArpe/: HCU database (LCA).pnml  PTPN.py  assessmentdata.pnml  example_casas.py  example_lca.py  lca_eng.pnml  pattern_discovery.py  requirements.txt
src/: ptpnbound.py
src/net/: Arc.py  PTPN.py  Place.py  Transition.py
src/perfBoundSolver/: CPLEX_LPsolver.py  LPsolver.py  ParamsExtractor.py
src/solver/: CPLEX_LPsolver.py  LPsolver.py  ParamsExtractor.py
src/tests/: test_CPLEX_LPsolver.py  test_PTPN.py  test_netIO.py  (+2 more)
tests/: test_CPLEX_LPsolver.py
(+352 files in other folders)
